Fixed some layout issues. Fixed button events.

--- a/pi-bot-webapp/src/app/app.component.scss
+++ b/pi-bot-webapp/src/app/app.component.scss
@@ -1,6 +1,7 @@
 @import '../assets/partials/variables.scss';
 
 header {
+  width: 100%;
   display: flex;
   justify-content: center;
   border-bottom: 2px solid $primary-border-color;
@@ -13,6 +14,8 @@ main {
   display: flex;
   justify-content: center;
   .main-content-container {
+    max-width: 800px;
+    width: 80%;
     .control-pad-container {
       margin: 0 0 1em 0;
     }
