--- a/pi-bot-webapp/src/app/response/response.component.scss
+++ b/pi-bot-webapp/src/app/response/response.component.scss
@@ -6,7 +6,6 @@
     border: 2px solid white;
     box-shadow: 0 0 10px 2px $shadow-color;
     padding: 1em;
-    width: 800px;
     height: 200px;
     overflow: scroll;
 }
